# data-angiogram

./: .gitignore  LICENSE  README.md  api_server.py  check_dag_status.sh  create_stats_from_taxi_rides.py  docker-compose.yml  kafka_check.py  kafka_to_parquet_job.py  pyproject.toml  trigger_dag.sh  verify_angiogram.py
.github/workflows/: data-angiogram-variant1.yaml  data-angiogram-variant2.yaml  data-angiogram.yaml
dags/: java.py  pipeline_dag.py
docker/: DockerfileAirflowWithDeps  DockerfileApi  build_airflow_deps_docker.sh  build_api_docker.sh  requirements.txt
test-scenarios/test-for-revenue/: generate_data.py  generate_validate_angiogram_data.sh  send_angiogram_data.sh  taxi_rides.txt  test_for_generated_data.py
working/: data-angiogram.yaml
