[tool.poetry]
name = "data-angiogram"
version = "0.1.0"
description = "demo on how to perform data angiogram to assess data quality and pipeline sanity"
authors = ["vishnu rao"]
license = "mit license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
#python = ">=3.10,<3.13"
fastapi = "0.110.0"
uvicorn = "0.23.2"
httpx = "0.25.0"
confluent-kafka = "2.3.0"
pyspark = "3.4.0"
#apache-airflow = "^2.9.2"
duckdb = "^1.0.0"
numpy = "2.0.0"
pandas = "^2.2.2"
parquet-cli = "^1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
